crates/math-core/tests/snapshots/conversion_test__xrightarrow_character_class.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x+\\xrightarrow{x}=y"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mrow>
        <mspace width="0.2777778em"/>
        <mover>
            <mo rspace="0">→</mo>
            <mover>
                <mrow>
                    <mspace width="0.4286em"/>
                    <mi>x</mi>
                    <mspace width="0.4286em"/>
                </mrow>
                <mspace width="3.5em"/>
            </mover>
        </mover>
        <mspace width="0.2777778em"/>
    </mrow>
    <mo lspace="0">=</mo>
    <mi>y</mi>
</math>
